--- a/index.html
+++ b/index.html
@@ -399,5 +399,38 @@
     Copyright © 2009-2019 City Blog LLC.
   </div>
 </footer>
+<div class="popup">
+	<div class="popup-container">
+		<button class="popup__close" type="button"></button>
+	<div class="popup-title">ваш фидбек</div>
+	<form class="form">
+		<label class="select-group">
+			<span class="select-label">Как часто вы заходите на сайт?</span>
+			<select class="select">
+				<option value="every day" selected>Почти каждый день</option>
+				<option value="every few days">Раз в несколько дней</option>
+				<option value="every few weeks">Раз в несколько недель</option>
+				<option value="several times a year">Несколько раз в год</option>
+			</select>
+				</label>
+			<div class="newsletter">
+				<span class="newsletter-title">Вы подписаны на e-mail рассылку?</span>
+			<label class="radio-group">
+				<input type="radio"class="radio"name="radio-group">
+				<span class="radio-group-text">Да</span>
+			</label>
+			<label class="radio-group">
+				<input type="radio"class="radio"name="radio-group">
+				<span class="radio-group-text">Нет</span>
+			</label>
+			</div>	
+			<label class="field-group">
+				<span class="field-label">Расскажите, какой контент вы бы хотели видеть на нашем сайте?</span>
+				<textarea class="field-textarea" placeholder="Может больше рецептов?"></textarea>
+			</label>
+        <button class="popup-button" type="submit">Отправить</button>		
+	</form>
+	</div>
+</div>
  </body>
 </html>
