--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>mq_diplom</title>
-	<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>mq_diplom</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="header">
+  <div class="header-content">
   <div class="header-logo-menu">
       <div class="logo">
        <a href="#">
       <img src="svg/noemi-logo.svg" alt="noemi"></a>
       </div>
       <nav class="menu">
+          <div class="menu-burger"></div>
         <ul class="menu-list">
           <li class="menu-list-item">
           <a class="menu-link" href="#">Главная</a>
@@ -34,15 +36,16 @@
       </nav>
     </div>
       <h1 class="header-title">Блог о творчестве, спорте и образе жизни</h1>
+      </div>
 </header>
 <!--Тренды-->
 <section class="trends">
 <h2 class="trends-title">сейчас в тренде</h2>
 <div class="trend-item">
-	  <article class="trend">
-	  	<img class="img-trend" src="images/trend1.jpg" alt="сад на подоконнике">
+    <article class="trend">
+      <img class="img-trend" src="images/trend1.jpg" alt="сад на подоконнике">
 <div class="trend-info">
-	  	  <ul>
+        <ul>
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">lifestyle</a>
             </li>
@@ -51,23 +54,23 @@
               </li>
               <h3 class="trend-title">сейчас в тренде: сад на подоконнике</h3>
         </ul>
-	  </div>
-	  </article>
-	  <article class="trend">
-	  	<img class="img-trend" src="images/trend2.jpg" alt="сад на подоконнике">
+    </div>
+    </article>
+    <article class="trend">
+      <img class="img-trend" src="images/trend2.jpg" alt="сад на подоконнике">
 <div class="trend-info">
-	  	  <ul>
+        <ul>
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">food</a>
             </li>
               <h3 class="trend-title">сыры на красивых картинках из интернета: какие они на вкус?</h3>
         </ul>
-	  </div>
-	  </article>
-	  <article class="trend">
-	  	<img class="img-trend" src="images/trend3.jpg" alt="сад на подоконнике">
+    </div>
+    </article>
+    <article class="trend">
+      <img class="img-trend" src="images/trend3.jpg" alt="сад на подоконнике">
 <div class="trend-info">
-	  	  <ul>
+        <ul>
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">lifestyle</a>
             </li>
@@ -76,12 +79,12 @@
               </li>
               <h3 class="trend-title">собираемся в первый поход в горы</h3>
         </ul>
-	  </div>
-	  </article>	  
-	  <article class="trend">
-	  	<img class="img-trend" src="images/trend4.jpg" alt="сад на подоконнике">
+    </div>
+    </article>    
+    <article class="trend">
+      <img class="img-trend" src="images/trend4.jpg" alt="сад на подоконнике">
 <div class="trend-info">
-	  	  <ul>
+        <ul>
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">food</a>
             </li>
@@ -90,8 +93,8 @@
               </li>
               <h3 class="trend-title">сейчас в тренде: сколько витамина с в лимонах?</h3>
         </ul>
-	  </div>
-	  </article>
+    </div>
+    </article>
 </div>
 </section>
 <!--Контент-->
@@ -319,46 +322,46 @@
 <section>
 <h2 class="shop-title">наши изделия</h2>
 <div class="shop">
-	<div class="shop-item">
+  <div class="shop-item">
    <img class="img-shop" src="images/shop-item-desk1.jpg" alt="подушки на диван"> 
    <div class="shop-info">
      <h3 class="shop-info-title">подушки на диван</h3>
      <p class="shop-info-content">Набор из двух подушек с модными принтами. Видео о создании 
       <a href="#0" class="shop-info-link">здесь.</a></p>
       <div class="shop-sale">
-      	<div class="price">
-      		<div class="old-price">1000 Р</div>
-      		<div class="new-price">800 Р</div>
-      	</div>
+        <div class="price">
+          <div class="old-price">1000 Р</div>
+          <div class="new-price">800 Р</div>
+        </div>
       <button class="shop-button" type="submit">в магазин</button>
    </div>
   </div>
 </div>
-	<div class="shop-item">
+  <div class="shop-item">
    <img class="img-shop" src="images/shop-item-desk2.jpg" alt="Интерьерная рукодельная кукла Зайчик"> 
     <div class="shop-info">
      <h3 class="shop-info-title">кукла "зайчик"</h3>
      <p class="shop-info-content">Интерьерная рукодельная кукла "Зайчик", созданию которой посвящена 
       <a href="#0" class="shop-info-link">весенняя серия постов</a> в блоге и несколько подкастов.</p>
       <div class="shop-sale">
-      	<div class="price">
-      		<div class="new-price">3500 Р</div>
-      	</div>
+        <div class="price">
+          <div class="new-price">3500 Р</div>
+        </div>
       <button class="shop-button" type="submit">в магазин</button>
    </div>
 </div>
   </div>
-	<div class="shop-item">
+  <div class="shop-item">
    <img class="img-shop" src="images/shop-item-desk3.jpg" alt="шестиугольная рамка"> 
    <div class="shop-info">
      <h3 class="shop-info-title">шестиугольная рамка</h3>
      <p class="shop-info-content">необычная рамка для украшения дома из видео
       <a href="#0" class="shop-info-link">"Как сделать рамку из подручных средств за 30 минут"</a></p>
       <div class="shop-sale">
-      	<div class="price">
-      		<div class="old-price">500 Р</div>
-      		<div class="new-price">400 Р</div>
-      	</div>
+        <div class="price">
+          <div class="old-price">500 Р</div>
+          <div class="new-price">400 Р</div>
+        </div>
       <button class="shop-button" type="submit">в магазин</button>
    </div>
   </div>
@@ -400,37 +403,37 @@
   </div>
 </footer>
 <div class="popup">
-	<div class="popup-container">
-		<button class="popup__close" type="button"></button>
-	<div class="popup-title">ваш фидбек</div>
-	<form class="form">
-		<label class="select-group">
-			<span class="select-label">Как часто вы заходите на сайт?</span>
-			<select class="select">
-				<option value="every day" selected>Почти каждый день</option>
-				<option value="every few days">Раз в несколько дней</option>
-				<option value="every few weeks">Раз в несколько недель</option>
-				<option value="several times a year">Несколько раз в год</option>
-			</select>
-				</label>
-			<div class="newsletter">
-				<span class="newsletter-title">Вы подписаны на e-mail рассылку?</span>
-			<label class="radio-group">
-				<input type="radio"class="radio"name="radio-group">
-				<span class="radio-group-text">Да</span>
-			</label>
-			<label class="radio-group">
-				<input type="radio"class="radio"name="radio-group">
-				<span class="radio-group-text">Нет</span>
-			</label>
-			</div>	
-			<label class="field-group">
-				<span class="field-label">Расскажите, какой контент вы бы хотели видеть на нашем сайте?</span>
-				<textarea class="field-textarea" placeholder="Может больше рецептов?"></textarea>
-			</label>
-        <button class="popup-button" type="submit">Отправить</button>		
-	</form>
-	</div>
+  <div class="popup-container">
+    <button class="popup__close" type="button"></button>
+  <div class="popup-title">ваш фидбек</div>
+  <form class="form">
+    <label class="select-group">
+      <span class="select-label">Как часто вы заходите на сайт?</span>
+      <select class="select">
+        <option value="every day" selected>Почти каждый день</option>
+        <option value="every few days">Раз в несколько дней</option>
+        <option value="every few weeks">Раз в несколько недель</option>
+        <option value="several times a year">Несколько раз в год</option>
+      </select>
+        </label>
+      <div class="newsletter">
+        <span class="newsletter-title">Вы подписаны на e-mail рассылку?</span>
+      <label class="radio-group">
+        <input type="radio"class="radio"name="radio-group">
+        <span class="radio-group-text">Да</span>
+      </label>
+      <label class="radio-group">
+        <input type="radio"class="radio"name="radio-group">
+        <span class="radio-group-text">Нет</span>
+      </label>
+      </div>  
+      <label class="field-group">
+        <span class="field-label">Расскажите, какой контент вы бы хотели видеть на нашем сайте?</span>
+        <textarea class="field-textarea" placeholder="Может больше рецептов?"></textarea>
+      </label>
+        <button class="popup-button" type="submit">Отправить</button>   
+  </form>
+  </div>
 </div>
  </body>
 </html>
