--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">interior</a>
               </li>
+                      </ul>
               <h3 class="trend-title">сейчас в тренде: сад на подоконнике</h3>
-        </ul>
     </div>
     </article>
     <article class="trend">
@@ -63,8 +63,8 @@
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">food</a>
             </li>
+            </ul>
               <h3 class="trend-title">сыры на красивых картинках из интернета: какие они на вкус?</h3>
-        </ul>
     </div>
     </article>
     <article class="trend">
@@ -77,8 +77,8 @@
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">travel</a>
               </li>
+               </ul>
               <h3 class="trend-title">собираемся в первый поход в горы</h3>
-        </ul>
     </div>
     </article>    
     <article class="trend">
@@ -91,8 +91,8 @@
           <li class="last-post-tag">
             <a href="#" class="last-post-tag-link">health</a>
               </li>
+                </ul>
               <h3 class="trend-title">сейчас в тренде: сколько витамина с в лимонах?</h3>
-        </ul>
     </div>
     </article>
 </div>
@@ -366,6 +366,7 @@
    </div>
   </div>
 </div>
+</div>
 </section>
   <!--Подвал-->
 <footer>
@@ -419,11 +420,11 @@
       <div class="newsletter">
         <span class="newsletter-title">Вы подписаны на e-mail рассылку?</span>
       <label class="radio-group">
-        <input type="radio"class="radio"name="radio-group">
+        <input type="radio" class="radio" name="radio-group">
         <span class="radio-group-text">Да</span>
       </label>
       <label class="radio-group">
-        <input type="radio"class="radio"name="radio-group">
+        <input type="radio" class="radio" name="radio-group">
         <span class="radio-group-text">Нет</span>
       </label>
       </div>  
