--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
       <a href="#0" class="shop-info-link">здесь.</a></p>
       <div class="shop-sale">
         <div class="price">
-          <div class="old-price">1000 Р</div>
-          <div class="new-price">800 Р</div>
+          <div class="old-price">1000 ₽</div>
+          <div class="new-price">800 ₽</div>
         </div>
-      <button class="shop-button" type="submit">в магазин</button>
+      <a href="#" class="shop-button">в магазин</a>
    </div>
   </div>
 </div>
@@ -345,9 +345,9 @@
       <a href="#0" class="shop-info-link">весенняя серия постов</a> в блоге и несколько подкастов.</p>
       <div class="shop-sale">
         <div class="price">
-          <div class="new-price">3500 Р</div>
+          <div class="new-price">3500 ₽</div>
         </div>
-      <button class="shop-button" type="submit">в магазин</button>
+      <a href="#" class="shop-button">в магазин</a>
    </div>
 </div>
   </div>
@@ -359,10 +359,10 @@
       <a href="#0" class="shop-info-link">"Как сделать рамку из подручных средств за 30 минут"</a></p>
       <div class="shop-sale">
         <div class="price">
-          <div class="old-price">500 Р</div>
-          <div class="new-price">400 Р</div>
+          <div class="old-price">500 ₽</div>
+          <div class="new-price">400 ₽</div>
         </div>
-      <button class="shop-button" type="submit">в магазин</button>
+      <a href="#" class="shop-button">в магазин</a>
    </div>
   </div>
 </div>
